--- a/montreal.html
+++ b/montreal.html
@@ -7,6 +7,8 @@
 <title>MONTREAL</title>
 	</head>
 
+
+
 <h1 style = "text-align: center; background-color: tomato">MONTREAL</h1>
 
 
@@ -53,4 +55,13 @@
 
 		}
 
-		</html>
+		</style>
+
+
+
+
+
+
+
+		<p> This is an image of statues in Montreal</p>
+		<img src = "image/montrealstatue.jpg" width="600" height=300> </img>
