--- a/toronto.html
+++ b/toronto.html
@@ -50,16 +50,63 @@
 
 		}
 
-		</html>
+
+		
+
+
+		</style> 
+
+
+
+
+<nav>
+<ul> 
+	<li> <a href="Home">Home</a> <li/>
+	<li> <a href="Toronto.html" >Toronto</a> <li/>
+	<li> <a href= "Quebec City" >Quebec City</a> <li/>
+	<li> <a href= "Montreal">Montreal</a><li/>
+	<li> <a href="about.html" >About</a> <li/>
+
 	
 
+</nav>
+
+			
+ 
+
+		
 
 
-	<p> This is a picture of Downtown Toronto</p>
-	<img src ="image/download.jpg"> </img>
-
-	</html> 
 
 
 
-<
+
+
+
+
+		<p> This is an image of Downtown Toronto at night time</p>
+		<img src = "image/download.jpg" width="600" height=300> </img>
+
+
+
+
+
+
+
+
+		</body>
+
+<html>
+<hr>
+
+<footer>
+	<p style="text-align:center"> <b> This is Copyright of Rayya 2020 </b> </p>
+
+
+</hr>
+
+
+</footer>
+</html>
+
+
